--- a/src/main/resources/templates/managers.html
+++ b/src/main/resources/templates/managers.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="ISO-8859-1">
-    <title>Employee Management System</title>
+    <title>Manager Management</title>
 
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -10,7 +10,6 @@
           crossorigin="anonymous">
 </head>
 <body>
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">EMS</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,39 +31,39 @@
 </nav>
 
 <div class="container my-2">
-    <h1>Employees List</h1>
+    <h1>Managers List</h1>
 
-    <a th:href="@{/showNewEmployeeForm}" class="btn btn-primary btn-sm mb-3">Add Employee</a>
+    <a th:href="@{/showNewManagerForm}" class="btn btn-primary btn-sm mb-3">Add Manager</a>
 
     <table border="1" class="table table-striped table-responsive-md">
         <thead>
         <tr>
             <th>
-                <a th:href="@{'/page/' + ${currentPage} + '?sortField=firstName&sortDir=' + ${reverseSortDir}}">
-                    Employee First Name
+                <a th:href="@{'/managers/page/' + ${currentPage} + '?sortField=firstName&sortDir=' + ${reverseSortDir}}">
+                    Manager First Name
                 </a>
             </th>
             <th>
-                <a th:href="@{'/page/' + ${currentPage} + '?sortField=lastName&sortDir=' + ${reverseSortDir}}">
-                    Employee Last Name
+                <a th:href="@{'/managers/page/' + ${currentPage} + '?sortField=lastName&sortDir=' + ${reverseSortDir}}">
+                    Manager Last Name
                 </a>
             </th>
             <th>
-                <a th:href="@{'/page/' + ${currentPage} + '?sortField=email&sortDir=' + ${reverseSortDir}}">
-                    Employee Email
+                <a th:href="@{'/managers/page/' + ${currentPage} + '?sortField=email&sortDir=' + ${reverseSortDir}}">
+                    Manager Email
                 </a>
             </th>
             <th>Actions</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="employee : ${listEmployees}">
-            <td th:text="${employee.firstName}"></td>
-            <td th:text="${employee.lastName}"></td>
-            <td th:text="${employee.email}"></td>
+        <tr th:each="manager : ${listManagers}">
+            <td th:text="${manager.firstName}"></td>
+            <td th:text="${manager.lastName}"></td>
+            <td th:text="${manager.email}"></td>
             <td>
-                <a th:href="@{/showFormForUpdate/{id}(id=${employee.id})}" class="btn btn-primary">Update</a>
-                <a th:href="@{/deleteEmployee/{id}(id=${employee.id})}" class="btn btn-danger">Delete</a>
+                <a th:href="@{/showFormForUpdateManager/{id}(id=${manager.id})}" class="btn btn-primary">Update</a>
+                <a th:href="@{/deleteManager/{id}(id=${manager.id})}" class="btn btn-danger">Delete</a>
             </td>
         </tr>
         </tbody>
@@ -77,16 +76,16 @@
             </div>
             <div class="col-sm-1">
                 <span th:each="i: ${#numbers.sequence(1, totalPages)}">
-                    <a th:if="${currentPage != i}" th:href="@{'/page/' + ${i} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
+                    <a th:if="${currentPage != i}" th:href="@{'/managers/page/' + ${i} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
                     <span th:unless="${currentPage != i}">[[${i}]]</span> &nbsp; &nbsp;
                 </span>
             </div>
             <div class="col-sm-1">
-                <a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${currentPage + 1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
+                <a th:if="${currentPage < totalPages}" th:href="@{'/managers/page/' + ${currentPage + 1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
                 <span th:unless="${currentPage < totalPages}">Next</span>
             </div>
             <div class="col-sm-1">
-                <a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${totalPages} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
+                <a th:if="${currentPage < totalPages}" th:href="@{'/managers/page/' + ${totalPages} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
                 <span th:unless="${currentPage < totalPages}">Last</span>
             </div>
         </div>
