--- a/src/main/resources/templates/managers.html
+++ b/src/main/resources/templates/managers.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="ISO-8859-1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manager Management</title>
 
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-          crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
+<!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">EMS</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,71 +30,77 @@
     </div>
 </nav>
 
+<!-- Main Content -->
 <div class="container my-2">
     <h1>Managers List</h1>
 
-    <a th:href="@{/showNewManagerForm}" class="btn btn-primary btn-sm mb-3">Add Manager</a>
-
-    <table border="1" class="table table-striped table-responsive-md">
-        <thead>
+    <div class="row">
+        <!-- Add Manager Button -->
+        <div class="col-md-6">
+            <a th:href="@{/showNewManagerForm}" class="btn btn-primary btn-sm mb-3">Add Manager</a>
+        </div>
+        <!-- Search Form -->
+        <div class="col-md-6">
+            <form action="#" th:action="@{/managers/search}" method="get" class="form-inline mb-3">
+                <input type="text" name="query" class="form-control mr-sm-2" placeholder="Search by name...">
+                <button type="submit" class="btn btn-primary">Search</button>
+            </form>
+        </div>
+    </div>
+    <!-- Managers Table -->
+    <table class="table table-striped">
+        <!-- Table headers -->
+        <thead class="thead-dark">
         <tr>
-            <th>
-                <a th:href="@{'/managers/page/' + ${currentPage} + '?sortField=firstName&sortDir=' + ${reverseSortDir}}">
-                    Manager First Name
-                </a>
-            </th>
-            <th>
-                <a th:href="@{'/managers/page/' + ${currentPage} + '?sortField=lastName&sortDir=' + ${reverseSortDir}}">
-                    Manager Last Name
-                </a>
-            </th>
-            <th>
-                <a th:href="@{'/managers/page/' + ${currentPage} + '?sortField=email&sortDir=' + ${reverseSortDir}}">
-                    Manager Email
-                </a>
-            </th>
+            <th>Manager First Name</th>
+            <th>Manager Last Name</th>
+            <th>Manager Email</th>
             <th>Actions</th>
         </tr>
         </thead>
         <tbody>
+        <!-- Loop through managers and display them -->
         <tr th:each="manager : ${listManagers}">
             <td th:text="${manager.firstName}"></td>
             <td th:text="${manager.lastName}"></td>
             <td th:text="${manager.email}"></td>
             <td>
-                <a th:href="@{/showFormForUpdateManager/{id}(id=${manager.id})}" class="btn btn-primary">Update</a>
-                <a th:href="@{/deleteManager/{id}(id=${manager.id})}" class="btn btn-danger">Delete</a>
+                <a th:href="@{/showFormForUpdateManager/{id}(id=${manager.id})}" class="btn btn-primary btn-sm">Update</a>
+                <a th:href="@{/deleteManager/{id}(id=${manager.id})}" class="btn btn-danger btn-sm">Delete</a>
             </td>
         </tr>
         </tbody>
     </table>
 
-    <div th:if="${totalPages > 1}">
-        <div class="row col-sm-10">
-            <div class="col-sm-2">
-                Total Rows: [[${totalItems}]]
-            </div>
-            <div class="col-sm-1">
+    <!-- Pagination -->
+    <div th:if="${totalPages > 1}" class="row col-sm-10">
+        <!-- Total rows -->
+        <div class="col-sm-2">
+            Total Rows: [[${totalItems}]]
+        </div>
+        <!-- Page numbers -->
+        <div class="col-sm-1">
                 <span th:each="i: ${#numbers.sequence(1, totalPages)}">
                     <a th:if="${currentPage != i}" th:href="@{'/managers/page/' + ${i} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
                     <span th:unless="${currentPage != i}">[[${i}]]</span> &nbsp; &nbsp;
                 </span>
-            </div>
-            <div class="col-sm-1">
-                <a th:if="${currentPage < totalPages}" th:href="@{'/managers/page/' + ${currentPage + 1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
-                <span th:unless="${currentPage < totalPages}">Next</span>
-            </div>
-            <div class="col-sm-1">
-                <a th:if="${currentPage < totalPages}" th:href="@{'/managers/page/' + ${totalPages} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
-                <span th:unless="${currentPage < totalPages}">Last</span>
-            </div>
+        </div>
+        <!-- Next page -->
+        <div class="col-sm-1">
+            <a th:if="${currentPage < totalPages}" th:href="@{'/managers/page/' + ${currentPage + 1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
+            <span th:unless="${currentPage < totalPages}">Next</span>
+        </div>
+        <!-- Last page -->
+        <div class="col-sm-1">
+            <a th:if="${currentPage < totalPages}" th:href="@{'/managers/page/' + ${totalPages} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
+            <span th:unless="${currentPage < totalPages}">Last</span>
         </div>
     </div>
 </div>
 
+<!-- Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk5pLM2oSR+7a1fKNLV6z0x4Ul9Dz+2n8F7nwh2" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
 </body>
 </html>
