--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">EMS</a>
+    <a class="navbar-brand" th:href="@{/}">EMS</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -29,6 +29,9 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/departments}">Departments</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/projects}">Projects</a>
             </li>
         </ul>
     </div>
