--- a/src/main/resources/templates/new_employee.html
+++ b/src/main/resources/templates/new_employee.html
@@ -1,32 +1,52 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
 <head>
-    <meta charset="ISO-8859-1">
+    <meta charset="UTF-8">
     <title>Employee Management System</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
-
 <body>
 <div class="container">
     <h1>Employee Management System</h1>
     <hr>
-    <h2>Save Employee</h2>
+    <h2>Add New Employee</h2>
 
-    <form action="#" th:action="@{/saveEmployee}" th:object="${employee}" method="POST">
-        <input type="text" th:field="*{firstName}" placeholder="Employee First Name" class="form-control mb-4 col-4">
+    <form th:action="@{/saveEmployee}" th:object="${employee}" method="POST">
+        <div class="form-group">
+            <label for="firstName">First Name</label>
+            <input type="text" id="firstName" th:field="*{firstName}" class="form-control col-4" placeholder="Enter First Name">
+        </div>
 
-        <input type="text" th:field="*{lastName}" placeholder="Employee Last Name" class="form-control mb-4 col-4">
+        <div class="form-group">
+            <label for="lastName">Last Name</label>
+            <input type="text" id="lastName" th:field="*{lastName}" class="form-control col-4" placeholder="Enter Last Name">
+        </div>
 
-        <input type="text" th:field="*{email}" placeholder="Employee Email" class="form-control mb-4 col-4">
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="text" id="email" th:field="*{email}" class="form-control col-4" placeholder="Enter Email">
+        </div>
 
-        <button type="submit" class="btn btn-info col-2"> Save Employee</button>
+        <div class="form-group">
+            <label for="manager">Manager</label>
+            <select id="manager" th:field="*{manager.id}" class="form-control col-4">
+                <option th:each="manager : ${managers}" th:value="${manager.id}" th:text="${manager.firstName + ' ' + manager.lastName}"></option>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label for="department">Department</label>
+            <select id="department" th:field="*{department.id}" class="form-control col-4">
+                <option th:each="department : ${departments}" th:value="${department.id}" th:text="${department.name}"></option>
+            </select>
+        </div>
+
+        <button type="submit" class="btn btn-info">Save Employee</button>
     </form>
 
     <hr>
 
-    <a th:href="@{/}"> Back to Employee List</a>
+    <a th:href="@{/}" class="btn btn-secondary">Back to Employee List</a>
 </div>
 </body>
-
 </html>
