--- a/src/main/resources/templates/update_employee.html
+++ b/src/main/resources/templates/update_employee.html
@@ -1,37 +1,64 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
 <head>
-  <meta charset="ISO-8859-1">
+  <meta charset="UTF-8">
   <title>Employee Management System</title>
-
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
 </head>
-
 <body>
 <div class="container">
   <h1>Employee Management System</h1>
   <hr>
   <h2>Update Employee</h2>
 
-  <form action="#" th:action="@{/saveEmployee}" th:object="${employee}" method="POST">
-
-    <!-- Add hidden form field to handle update -->
+  <form th:action="@{/saveEmployee}" th:object="${employee}" method="POST">
+    <!-- Hidden form field to handle update -->
     <input type="hidden" th:field="*{id}" />
 
-    <input type="text" th:field="*{firstName}" class="form-control mb-4 col-4">
+    <div class="form-group">
+      <label for="firstName">First Name</label>
+      <input type="text" id="firstName" th:field="*{firstName}" class="form-control col-4" placeholder="Enter First Name">
+    </div>
 
-    <input type="text" th:field="*{lastName}" class="form-control mb-4 col-4">
+    <div class="form-group">
+      <label for="lastName">Last Name</label>
+      <input type="text" id="lastName" th:field="*{lastName}" class="form-control col-4" placeholder="Enter Last Name">
+    </div>
 
-    <input type="text" th:field="*{email}" class="form-control mb-4 col-4">
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input type="text" id="email" th:field="*{email}" class="form-control col-4" placeholder="Enter Email">
+    </div>
 
-    <button type="submit" class="btn btn-info col-2"> Update Employee</button>
+    <div class="form-group">
+      <label for="manager">Manager</label>
+      <select id="manager" th:field="*{manager.id}" class="form-control col-4">
+        <option th:each="manager : ${managers}" th:value="${manager.id}" th:text="${manager.firstName + ' ' + manager.lastName}"></option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label for="department">Department</label>
+      <select id="department" th:field="*{department.id}" class="form-control col-4">
+        <option th:each="department : ${departments}" th:value="${department.id}" th:text="${department.name}"></option>
+      </select>
+    </div>
+
+    <button type="submit" class="btn btn-info">Update Employee</button>
   </form>
 
   <hr>
 
-  <a th:href="@{/}"> Back to Employee List</a>
+  <a th:href="@{/}" class="btn btn-secondary">Back to Employee List</a>
 </div>
-</body>
 
+<!-- Bootstrap and jQuery scripts -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk5pLM2oSR+7a1fKNLV6z0x4Ul9Dz+2n8F7nwh2" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+</body>
 </html>
