--- a/src/main/resources/templates/update_manager.html
+++ b/src/main/resources/templates/update_manager.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="ISO-8859-1">
+    <meta charset="UTF-8">
     <title>Update Manager</title>
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -25,6 +25,12 @@
         <div class="form-group">
             <label>Email</label>
             <input type="email" class="form-control" th:field="*{email}">
+        </div>
+        <div class="form-group">
+            <label>Department</label>
+            <select class="form-control" th:field="*{department}">
+                <option th:each="dept : ${departments}" th:value="${dept.id}" th:text="${dept.name}"></option>
+            </select>
         </div>
         <button type="submit" class="btn btn-primary">Save</button>
         <a th:href="@{/managers}" class="btn btn-secondary">Back to Managers</a>
