--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -81,6 +81,7 @@
             <td>
                 <a th:href="@{/showFormForUpdate/{id}(id=${employee.id})}" class="btn btn-primary">Update</a>
                 <a th:href="@{/deleteEmployee/{id}(id=${employee.id})}" class="btn btn-danger">Delete</a>
+                <a th:href="@{/detailEmployee/{id}(id=${employee.id})}" class="btn btn-primary">Detail</a>
             </td>
         </tr>
         </tbody>
