--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,6 +33,9 @@
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/projects}">Projects</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/teams}">Teams</a>
+            </li>
         </ul>
     </div>
 </nav>
