before security changes

--- a/src/main/resources/templates/departments/department_detail.html
+++ b/src/main/resources/templates/departments/department_detail.html
@@ -23,6 +23,7 @@
                 </li>
             </ul>
         </div>
+        <a th:href="@{/departments}" class="btn btn-secondary">Back to List</a>
     </div>
 </div>
 
