--- a/src/main/resources/templates/departments/create.html
+++ b/src/main/resources/templates/departments/create.html
@@ -25,6 +25,12 @@
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/departments}">Departments</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/projects}">Projects</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/teams}">Teams</a>
+            </li>
         </ul>
     </div>
 </nav>
