--- a/src/main/resources/templates/new_employee.html
+++ b/src/main/resources/templates/new_employee.html
@@ -41,6 +41,13 @@
             </select>
         </div>
 
+        <div class="form-group">
+            <label for="team">Team</label>
+            <select id="team" th:field="*{team.id}" class="form-control col-4">
+                <option th:each="team : ${teams}" th:value="${team.id}" th:text="${team.name}"></option>
+            </select>
+        </div>
+
         <button type="submit" class="btn btn-info">Save Employee</button>
     </form>
 
