--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -30,6 +30,9 @@
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/projects}">Projects</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/teams}">Teams</a>
+            </li>
         </ul>
     </div>
 </nav>
