--- a/src/main/resources/templates/teams.html
+++ b/src/main/resources/templates/teams.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="ISO-8859-1">
-    <title>Edit Department</title>
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-          crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <title>Teams</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">EMS</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" th:href="@{/}">EMS</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -29,26 +28,38 @@
                 <a class="nav-link" th:href="@{/projects}">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/teams}">Teams</a>
+                <a class="nav-link active" th:href="@{/teams}">Teams</a>
             </li>
         </ul>
     </div>
 </nav>
 
-<div class="container my-4">
-    <h1 class="mb-4">Edit Department</h1>
-    <form th:action="@{/departments/update/{id}(id=${department.id})}" th:object="${department}" method="post">
-        <div class="form-group">
-            <label for="name">Name:</label>
-            <input type="text" id="name" th:field="*{name}" class="form-control" />
-        </div>
-        <button type="submit" class="btn btn-primary">Update</button>
-        <a th:href="@{/departments}" class="btn btn-secondary">Back to List</a>
-    </form>
+<div class="container my-2">
+    <h1>Teams List</h1>
+    <a th:href="@{/teams/new}" class="btn btn-primary mb-2">Add Team</a>
+    <table class="table table-striped table-responsive-md">
+        <thead>
+        <tr>
+            <th>Team Name</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="team : ${teams}">
+            <td th:text="${team.name}"></td>
+            <td>
+                <a th:href="@{/teams/{id}(id=${team.id})}" class="btn btn-primary">View Details</a>
+                <a th:href="@{/teams/edit/{id}(id=${team.id})}" class="btn btn-secondary">Update</a>
+                <a th:href="@{/teams/delete/{id}(id=${team.id})}" class="btn btn-danger">Delete</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk5pLM2oSR+7a1fKNLV6z0x4Ul9Dz+2n8F7nwh2" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 </body>
 </html>
