--- a/src/main/resources/templates/departments/department_detail.html
+++ b/src/main/resources/templates/departments/department_detail.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Department Detail</title>
-    <!-- Ajoutez vos liens CSS et scripts JS nécessaires ici -->
+    <!-- Include Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+          crossorigin="anonymous">
 </head>
 <body>
 
@@ -14,7 +17,7 @@
         <div class="col-md-6">
             <h2 th:text="${department.name}"></h2>
             <p>ID: <span th:text="${department.id}"></span></p>
-            <!-- Ajoutez d'autres attributs du département que vous souhaitez afficher ici -->
+            <!-- Add other department attributes you want to display here -->
 
             <h3>Employees:</h3>
             <ul>
@@ -23,9 +26,24 @@
                 </li>
             </ul>
         </div>
-        <a th:href="@{/departments}" class="btn btn-secondary">Back to List</a>
+        <div class="col-md-6">
+            <!-- You can add more content here if needed -->
+        </div>
     </div>
+
+    <a th:href="@{/departments}" class="btn btn-secondary">Back to List</a>
 </div>
+
+<!-- Include Bootstrap JS and any additional scripts if needed -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk5pLM2oSR+7a1fKNLV6z0x4Ul9Dz+2n8F7nwh2"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
