--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,6 +37,14 @@
                 <a class="nav-link" th:href="@{/teams}">Teams</a>
             </li>
         </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <form th:action="@{/logout}" method="post">
+                    <button type="submit" class="btn btn-link nav-link">Logout</button>
+                    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+                </form>
+            </li>
+        </ul>
     </div>
 </nav>
 
@@ -49,10 +57,11 @@
             <a th:href="@{/showNewEmployeeForm}" class="btn btn-primary btn-sm mb-3">Add Employee</a>
         </div>
         <!-- Search Form -->
+        <!--
         <form action="#" th:action="@{/search}" method="get" class="form-inline mb-3">
             <input type="text" name="query" class="form-control mr-sm-2" placeholder="Search by name...">
             <button type="submit" class="btn btn-primary">Search</button>
-        </form>
+        </form> -->
     </div>
 
     <table border="1" class="table table-striped table-responsive-md">
